Complete leave API and Login ID cleanup
